add corpora with unclear licensing terms as download on the fly

--- a/examples/ex2/input/HSB.yaml
+++ b/examples/ex2/input/HSB.yaml
@@ -3,6 +3,9 @@
 input_txts:      
     - "cv.hsb"
     - "smartlamp.hsb"
+    - "sorbian_institute_monolingual.hsb"
+    - "web_monolingual.hsb"
+    - "witaj_monolingual.hsb"
     #- "vocabulary.txt"
     #- "test.txt"
 
