--- a/examples/ex3/input/HSB.yaml
+++ b/examples/ex3/input/HSB.yaml
@@ -1,8 +1,9 @@
 # Configuration file
 
-input_txts:      
-    - "cv.hsb"
-    - "smartlamp.hsb"
+input_txts:
+    - "custom.hsb"
+    # - "cv.hsb"
+    # - "smartlamp.hsb"
     #- "vocabulary.txt"
     #- "test.txt"
 
@@ -12,11 +13,11 @@ exceptions_file:    "exceptions_v3.txt"
 mode:       "sampa"         # "uasr" or "sampa"
 # basic_type: "diphones"      # "phones", "diphones", "triphones" or empty not generating sentences
 case:       "uc"            # "uc" - upper case, "lc" - lower case, "or" - original
-split:      5               # number of separate datasets
+split:      1               # number of separate datasets
 offset:     0              # id starting number
 num_sentences: 750           # maximal number of sentences in all splits
-min_duration:  2            # minimal duration in seconds of speech per sentence (0-3s)
-no_speakers:   3            # number of possible speakers per split
+min_duration:  1            # minimal duration in seconds of speech per sentence (0-3s)
+no_speakers:   1            # number of possible speakers per split
 user_vocab: 
         #- "user1.vocab"    # use existing vocabularies to restrict the sentences from the corpus
         #- "user2.vocab"
