add dependencies for reading out lexicon

--- a/examples/ex5/Dockerfile
+++ b/examples/ex5/Dockerfile
@@ -7,6 +7,8 @@ MAINTAINER Daniel Sobe <daniel.sobe@sorben.com>
 # rebuild from scratch
 # docker build -t speech_recognition_corpus_creation_ex5 . --no-cache
 
+RUN sed -i 's/ main/ main contrib non-free/' /etc/apt/sources.list
+
 RUN apt update
 
 RUN apt install -y python3 python3-numpy python3-matplotlib python3-yaml
@@ -14,13 +16,22 @@ RUN apt install -y python3 python3-numpy python3-matplotlib python3-yaml
 RUN mkdir -p /results/
 RUN mkdir -p /input/
 
+# tools for "reading out" lexicon entries
+RUN apt install -y mbrola-de6 alsa-utils libterm-readkey-perl
+
+ADD read_lexicon.pl /
+
+# tools for inspecting container
+RUN apt install -y procps nano
+
 # just a default instruction, might be handy
 CMD ["/bin/bash"]
 
 # how to use this container to run the tool:
 ## mkdir -p output && rm -rf ./output/* 
 ## docker run --mount type=bind,source="$(pwd)"/output,target=/results/ --mount type=bind,source="$(pwd)"/input,target=/input/ -it speech_recognition_corpus_creation_ex5 /input/runme.sh
-
+# read out lexicon
+## docker run --privileged --mount type=bind,source="$(pwd)"/output,target=/results/ -it speech_recognition_corpus_creation_ex5 /read_lexicon.pl /results/hsb_sampa.lex de6
 
 # on windows, assure runme.sh is converted to unix linefeeds, and run a cmdline similar to this one (replace absolute paths):
 ##  winpty docker run --mount type=bind,source="/c/Users/$USER/$PATH_TO_HERE/output",target=/results/ --mount type=bind,source="/c/Users/$USER/$PATH_TO_HERE/input",target=/input/ -it speech_recognition_corpus_creation_ex5
