--- a/examples/ex7/input/configuration/TEST.yaml
+++ b/examples/ex7/input/configuration/TEST.yaml
@@ -2,10 +2,11 @@
 
 input_txts:
     #- "test_small.txt"
-    - "test.txt"
+    #- "test.txt"
+    - "cv.hsb"
 
 phoneme_inventory:  "phonmap_v3.txt"
-exceptions_file:    "exceptions_v3_draft.txt"
+exceptions_file:    "exceptions_v4.txt"
 output_dir:         "corpus"
 database:           "db-hsb-asr"
 
