add example for phoneme reduction

--- a/examples/ex8/configuration/HSB.yaml
+++ b/examples/ex8/configuration/HSB.yaml
@@ -33,10 +33,14 @@ hcraft_lex:
         - ../resources/hcraft/hcraft_lexicon_6.grm
         - ../resources/hcraft/hcraft_lexicon_7.grm
         - ../resources/hcraft/hcraft_lexicon_8.grm
+        - ../resources/hcraft/hcraft_example_phonreduction.grm
 
-#hcraft_lex_map: #Maps the given phonemes from the handcrafted into ones from the phoneme inventory
-#    '1': 'y'
-#    'jn': 'N'
+hcraft_lex_map: #Maps the given phonemes from the handcrafted into ones from the phoneme inventory
+    'I': 'ji'
+    '6': 'r'
+    '@': '1'
+    'R': 'r'
+    'a:': 'a'
 
 names:
     - "phones"
